--- a/Magellano/WebAPI/Views/Shared/_Layout.cshtml
+++ b/Magellano/WebAPI/Views/Shared/_Layout.cshtml
@@ -9,41 +9,140 @@
     <link rel="stylesheet" href="~/WebAPI.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebAPI</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <header class="header clearfix element_to_stick">
+        <div class="layer"></div><!-- Opacity Mask Menu Mobile -->
+        <div class="container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="~/img/logo.svg" alt="" width="140" height="35">
+                </a>
+            </div>
+            <ul class="top_menu">
+                <li><a asp-controller="Login" asp-action="Index" class="btn_access">Log In</a></li>
+            </ul>
+            <!-- /top_menu -->
+            <a href="#0" class="open_close">
+                <i class="bi bi-list"></i><span>Menu</span>
+            </a>
+            <nav class="main-menu">
+                <div id="header_menu">
+                    <a href="#0" class="open_close">
+                        <i class="bi bi-x"></i>
+                    </a>
+                    <a href="index.html"><img src="~/img/logo-placeholder.png" data-src="img/logo.svg" width="120" height="30" alt="" class="lazy"></a>
+                </div>
+                <ul>
+                    <li class="submenu">
+                        <a asp-controller="Home" asp-action="Index" class="show-submenu">Home</a>
+                    </li>
+                    <li class="submenu">
+                        <a asp-controller="Upload" asp-action="Upload" class="show-submenu">Upload</a>
+                    </li>
+                    <li class="submenu">
+                        <a asp-controller="Explore" asp-action="Index" class="show-submenu">Explore</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div>
+            @RenderBody()
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <h3>Marketplace</h3>
+                    <div class="links">
+                        <ul>
+                            <li><a href="~/index.html">Home</a></li>
+                            <li><a href="~/grid-listing-1.html">Explore</a></li>
+                            <li><a href="~/login.html">Login</a></li>
+                            <li><a href="~/register.html">Register</a></li>
+                            <li><a href="~/contacts.html">Contacts</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <h3>Useful Links</h3>
+                    <div class="links">
+                        <ul>
+                            <li><a href="~/help.html">Help Center</a></li>
+                            <li><a href="~/connect-wallet.html">Connect Wallet</a></li>
+                            <li><a href="~/help.html">Faq</a></li>
+                            <li><a href="~/pricing-tables-2.html">Pricing</a></li>
+                            <li><a href="~/contacts.html">Become an Author</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <h3>Resources</h3>
+                    <div class="links">
+                        <ul>
+                            <li><a href="~/#0">Blog</a></li>
+                            <li><a href="~/#0">Community</a></li>
+                            <li><a href="~/#0">Best Price</a></li>
+                            <li><a href="~/#0">Latest Submissions</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <h3>Keep in touch</h3>
+                    <div id="newsletter">
+                        <div id="message-newsletter"></div>
+                        <form method="post" name="newsletter_form" id="newsletter_form">
+                            <div class="form-group">
+                                <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
+                                <button type="submit" id="submit-newsletter"><i class="bi bi-chevron-right"></i></button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="follow_us">
+                        <ul>
+                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="/img/twitter_icon.svg" alt="" class="lazy"></a></li>
+                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="/img/facebook_icon.svg" alt="" class="lazy"></a></li>
+                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="/img/instagram_icon.svg" alt="" class="lazy"></a></li>
+                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="/img/youtube_icon.svg" alt="" class="lazy"></a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <!-- /row-->
+            <hr>
+            <div class="row add_bottom_25">
+                <div class="col-md-6">
+                    <ul class="footer-selector clearfix">
+                        <li>
+                            <div class="styled-select lang-selector">
+                                <select>
+                                    <option value="English" selected>English</option>
+                                    <option value="French">French</option>
+                                    <option value="Spanish">Spanish</option>
+                                    <option value="Russian">Russian</option>
+                                </select>
+                            </div>
                         </li>
                     </ul>
                 </div>
+                <div class="col-md-6">
+                    <ul class="additional_links">
+                        <li><a href="~/#0">Terms and conditions</a></li>
+                        <li>© 2022 Magellano</li>
+                    </ul>
+                </div>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - WebAPI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    <!--/footer-->
+
+    <div id="toTop"></div><!-- Back to top button -->
+    <!-- COMMON SCRIPTS -->
+    <script src="~/js/common_scripts.min.js"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/common_func.js"></script>
 </body>
 </html>
