--- a/Magellano/WebAPI/Views/Upload/Upload.cshtml
+++ b/Magellano/WebAPI/Views/Upload/Upload.cshtml
@@ -35,84 +35,7 @@
 
     <div id="preloader"><div data-loader="circle-side"></div></div><!-- /Page Preload -->
 
-    <header class="header_in clearfix element_to_stick">
-        <div class="layer"></div><!-- Opacity Mask Menu Mobile -->
-        <div class="container">
-            <div class="logo">
-                <a href="~/index.html">
-                    <img src="~/img/logo.svg" alt="" width="140" height="35">
-                </a>
-            </div>
-            <ul class="top_menu">
-                <li><a href="~/login.html" class="btn_access">Log In</a></li>
-                <li><a href="~/connect-wallet.html" class="btn_access">Connect Wallet</a></li>
-            </ul>
-            <!-- /top_menu -->
-            <a href="~/#0" class="open_close">
-                <i class="bi bi-list"></i><span>Menu</span>
-            </a>
-            <nav class="main-menu">
-                <div id="header_menu">
-                    <a href="~/#0" class="open_close">
-                        <i class="bi bi-x"></i>
-                    </a>
-                    <a href="~/index.html"><img src="~/img/logo.svg" width="120" height="35" alt=""></a>
-                </div>
-                <ul>
-                    <li class="submenu">
-                        <a href="~/#0" class="show-submenu">Home</a>
-                        <ul>
-                            <li><a href="~/index.html">Default</a></li>
-                            <li><a href="~/index-2.html">Experimental Particles</a></li>
-                            <li><a href="~/index-3.html">Video Background</a></li>
-                            <li><a href="~/index-4.html">Vertical Slider</a></li>
-                            <li><a href="~/index-5.html">Slider</a></li>
-                            <li><a href="~/index-6.html">Hero Categories</a></li>
-                            <li><a href="~/index-7.html">GDPR Cookie Bar EU Law</a></li>
-                            <li><a href="~/index-8.html">Modal Advertise</a></li>
-                            <li><a href="~/index-9.html">Modal Newsletter</a></li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a href="~/#0" class="show-submenu">Explore</a>
-                        <ul>
-                            <li><a href="~/grid-listing-1.html">Grid Listing Default</a></li>
-                            <li><a href="~/grid-listing-2.html">Grid Listing Isotope Sort</a></li>
-                            <li><a href="~/grid-listing-3.html">Grid Listing Filters Left</a></li>
-                            <li><a href="~/detail-page.html">Detail page 1</a></li>
-                            <li><a href="~/detail-page-2.html">Detail page 2</a></li>
-                            <li><a href="~/author.html">Author page</a></li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a href="~/#0" class="show-submenu">Pages</a>
-                        <ul>
-                            <li><a href="~/404.html">404 Error</a></li>
-                            <li><a href="~/help.html">Help and Faq</a></li>
-                            <li class="third-level">
-                                <a href="~/#0">Pricing Tables</a>
-                                <ul>
-                                    <li><a href="~/pricing-tables-1.html">Version 1</a></li>
-                                    <li><a href="~/pricing-tables-2.html">Version 2</a></li>
-                                    <li><a href="~/pricing-tables-3.html">Version 3</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="~/become-author.html">Become an Author</a></li>
-                            <li><a href="~/author-edit-profile.html">Edit profile</a></li>
-                            <li><a href="~/upload-artwork.html">Upload Artwork</a></li>
-                            <li><a href="~/account-settings.html">Account Settings</a></li>
-                            <li><a href="~/blog.html">Blog</a></li>
-                            <li><a href="~/contacts.html">Contacts</a></li>
-                            <li><a href="~/login.html">Login</a></li>
-                            <li><a href="~/register.html">Register</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="~/#0">Buy this template</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <!-- /header -->
+  
 
     <main>
         <div class="hero_single inner_pages author_page jarallax" data-jarallax>
@@ -170,38 +93,34 @@
                     </div>
                     <!-- /row -->
 
+                    <form action="/Upload/Upload" method="post">
                     <div class="row">
                         <div class="col-md-8">
                             <div class="form-group">
                                 <label>Item title</label>
-                                <input type="text" class="form-control" placeholder="e.g. Abstract modern art">
+                                <input type="text" name="Name" class="form-control" placeholder="e.g. Abstract modern art">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Price</label>
-                                <input type="text" class="form-control" placeholder="e.g. Abstract modern art">
+                                <input type="text" name="Price" class="form-control" placeholder="e.g. Abstract modern art">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Description</label>
-                                <input type="text" class="form-control" placeholder="e.g. Abstract modern art">
+                                <input type="text" name="Description" class="form-control" placeholder="e.g. Abstract modern art">
                             </div>
                         </div>
+
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label>Royalties</label>
-                                <input type="text" class="form-control" placeholder="e.g. Abstract modern art">
+                                <label>Link to the picture</label>
+                                <input type="text" name="Url" class="form-control" placeholder="www.google.com/MyNft.jpg">
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label>Size</label>
-                                <input type="text" class="form-control" placeholder="e.g. 1000x800">
-                            </div>
-                        </div>
-                        <div class="col-md-4">
+@*                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Choose a collection</label>
                                 <div class="custom_select">
@@ -212,8 +131,9 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
+                        </div> *@
                     </div>
+
                     <!-- /row -->
 
                     <hr class="mt-3 mb-5">
@@ -239,8 +159,9 @@
                         </div>
                     </div>
                     <!-- /row -->
-
-                    <p class="text-end mt-4"><a href="~/#0" class="btn_1">Save changes</a></p>
+                    @* <input type="submit" value="Войти" /> *@
+                    <p class="text-end mt-4"><input type="submit" class="btn_1"/></p>
+                    </form>
 
                 </div>
             </div>
@@ -249,101 +170,6 @@
         <!-- /container -->
     </main>
     <!-- /main -->
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <h3>Marketplace</h3>
-                    <div class="links">
-                        <ul>
-                            <li><a href="~/index.html">Home</a></li>
-                            <li><a href="~/grid-listing-1.html">Explore</a></li>
-                            <li><a href="~/login.html">Login</a></li>
-                            <li><a href="~/register.html">Register</a></li>
-                            <li><a href="~/contacts.html">Contacts</a></li>
-                        </ul>
-                    </div>
-
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <h3>Useful Links</h3>
-                    <div class="links">
-                        <ul>
-                            <li><a href="~/help.html">Help Center</a></li>
-                            <li><a href="~/connect-wallet.html">Connect Wallet</a></li>
-                            <li><a href="~/help.html">Faq</a></li>
-                            <li><a href="~/pricing-tables-2.html">Pricing</a></li>
-                            <li><a href="~/contacts.html">Become an Author</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <h3>Resources</h3>
-                    <div class="links">
-                        <ul>
-                            <li><a href="~/#0">Blog</a></li>
-                            <li><a href="~/#0">Community</a></li>
-                            <li><a href="~/#0">Best Price</a></li>
-                            <li><a href="~/#0">Latest Submissions</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <h3>Keep in touch</h3>
-                    <div id="newsletter">
-                        <div id="message-newsletter"></div>
-                        <form method="post" name="newsletter_form" id="newsletter_form">
-                            <div class="form-group">
-                                <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
-                                <button type="submit" id="submit-newsletter"><i class="bi bi-chevron-right"></i></button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="follow_us">
-                        <ul>
-                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/twitter_icon.svg" alt="" class="lazy"></a></li>
-                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/facebook_icon.svg" alt="" class="lazy"></a></li>
-                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/instagram_icon.svg" alt="" class="lazy"></a></li>
-                            <li><a href="~/#0"><img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/youtube_icon.svg" alt="" class="lazy"></a></li>
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
-            <!-- /row-->
-            <hr>
-            <div class="row add_bottom_25">
-                <div class="col-md-6">
-                    <ul class="footer-selector clearfix">
-                        <li>
-                            <div class="styled-select lang-selector">
-                                <select>
-                                    <option value="English" selected>English</option>
-                                    <option value="French">French</option>
-                                    <option value="Spanish">Spanish</option>
-                                    <option value="Russian">Russian</option>
-                                </select>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <ul class="additional_links">
-                        <li><a href="~/#0">Terms and conditions</a></li>
-                        <li>© 2022 Magellano</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!--/footer-->
-
-    <div id="toTop"></div><!-- Back to top button -->
-    <!-- COMMON SCRIPTS -->
-    <script src="~/js/common_scripts.min.js"></script>
-    <script src="~/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/common_func.js"></script>
 
 </body>
 </html>
