--- a/Magellano/WebAPI/Views/Home/Index.cshtml
+++ b/Magellano/WebAPI/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
 										<div class="author_thumb veryfied">
 											<i class="bi bi-check"></i>
 											<figure>
-												<img  data-src="@item.User.PhotoUrl" alt="" class="owl-lazy" width="100" height="100"> @* TODO Сделать так, чтобы фото профиля бралось из связанной модельки юзера *@
+												<img  data-src="@item.User.PhotoUrl" alt="" class="owl-lazy" width="100" height="100"> 
 											</figure>
 										</div>
 										<h6>@item.User.Name</h6>
