created register, continuing

--- a/Magellano/WebAPI/Views/Home/Index.cshtml
+++ b/Magellano/WebAPI/Views/Home/Index.cshtml
@@ -238,7 +238,7 @@
 				<div class="row justify-content-md-center how_2">
 					<div class="col-lg-5 text-center">
 						<figure class="mb-5">
-							<img src="~/data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/web_wireframe.svg" alt="" class="img-fluid lazy" width="360" height="380">
+							<img src="img/web_wireframe.svg" data-src="img/web_wireframe.svg" alt="" class="img-fluid lazy" width="360" height="380">
 						</figure>
 					</div>
 					<div class="col-lg-5">
