--- a/Magellano/WebAPI/Views/Shared/_Layout.cshtml
+++ b/Magellano/WebAPI/Views/Shared/_Layout.cshtml
@@ -18,7 +18,10 @@
                 </a>
             </div>
             <ul class="top_menu">
-                <li><a asp-controller="Login" asp-action="Index" class="btn_access">Log In</a></li>
+                <li><a asp-controller="Auth" asp-action="Login" class="btn_access">Log In</a></li>
+            </ul>  
+            <ul class="top_menu">
+                <li><a asp-controller="Auth" asp-action="Register" class="btn_access">Register</a></li>
             </ul>
             <!-- /top_menu -->
             <a href="#0" class="open_close">
