--- a/Magellano/WebAPI/Views/Auth/Register.cshtml
+++ b/Magellano/WebAPI/Views/Auth/Register.cshtml
@@ -36,48 +36,51 @@
 	<link href="~/css/custom.css" rel="stylesheet">
 </head>
 
-<body id="login_bg">
+<body id="register_bg">
 
-	<div id="preloader"><div data-loader="circle-side"></div></div><!-- /Page Preload -->
+	@* <div id="preloader"><div data-loader="circle-side"></div></div><!-- /Page Preload --> *@
+
+	<nav id="menu" class="fake_menu"></nav>
 
 	<div id="login">
 		<aside>
 			<figure>
-				<a href="~/index.html"><img src="~/img/logo.svg" alt="" width="140" height="35"></a>
+				<a href="~/index.html"><img src="img/logo.svg" alt="" width="140" height="35"></a>
 			</figure>
-			<form action="/Auth/Login" method="post">
-				<div class="access_social">
-					<a href="~/#0" class="social_bt facebook">Login with Facebook</a>
-					<a href="~/#0" class="social_bt google">Login with Google</a>
-				</div>
-				<div class="divider"><span>Or</span></div>
+			<div class="access_social">
+				<a href="~/#0" class="social_bt facebook">Register with Facebook</a>
+				<a href="~/#0" class="social_bt google">Register with Google</a>
+			</div>
+			<div class="divider"><span>Or</span></div>
+			<form action="/Auth/Register" method="post">
 				<div class="form-group mb-3">
-					<input type="email" class="form-control" name="Email" id="email" placeholder="Email">
+					<input name="Name" class="form-control" type="text" placeholder="Username">
+					<i class="icon_pencil-edit"></i>
+				</div>
+				<div class="form-group mb-3">
+					<input name="Email ""class="form-control" type="email" placeholder="Email">
+				</div>
+				<div class="form-group mb-3">
+					<input name="Password" class="form-control" type="password" id="password1" placeholder="Password">
 				</div>
 				<div class="form-group">
-					<input type="password" class="form-control" name="Password" id="password" value="" placeholder="Password">
+					<input class="form-control" type="password" id="password2" placeholder="Confirm Password">
 				</div>
-				<div class="clearfix add_bottom_30">
-					<div class="checkboxes float-start">
-						<label class="container_check">
-							Remember me
-							<input type="checkbox">
-							<span class="checkmark"></span>
-						</label>
-					</div>
-					<div class="float-end"><a id="forgot" href="~/javascript:void(0);">Forgot Password?</a></div>
-				</div>
-				<input type="submit" class="btn_1 full-width">Login</input>
-				<div class="text-center add_top_10">New to Magellano? <strong><a href="/Auth/Register">Sign up!</a></strong></div>
+				<div id="pass-info" class="clearfix"></div>
+				<input type="submit" class="btn_1 full-width">Register Now!</input>
+				<div class="text-center add_top_10">Already have an acccount? <strong><a href="~/login.html">Sign Up</a></strong></div>
 			</form>
 			<div class="copy">© 2022 Magellano</div>
 		</aside>
 	</div>
 	<!-- /login -->
 	<!-- COMMON SCRIPTS -->
-	<script src="~/js/common_scripts.min.js"></script>
-	<script src="~/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/common_func.js"></script>
+	<script src="js/common_scripts.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="js/common_func.js"></script>
+
+	<!-- SPECIFIC SCRIPTS -->
+	<script src="js/pw_strenght.js"></script>
 
 </body>
 </html>
