--- a/Magellano/WebAPI/Views/Upload/Upload.cshtml
+++ b/Magellano/WebAPI/Views/Upload/Upload.cshtml
@@ -54,11 +54,11 @@
                             <div class="author_thumb veryfied">
                                 <i class="bi bi-check"></i>
                                 <figure>
-                                    <img src="~/img/avatar-placeholder.png" data-src="~/img/avatar1.jpg" alt="" class="lazy" width="100" height="100">
+                                    <img src="@Model.PhotoUrl" data-src="@Model.PhotoUrl" alt="" class="lazy" width="100" height="100">
                                 </figure>
                             </div>
                         </div>
-                        <h1> George_lucas</h1>
+                        <h1> @Model.Name</h1>
                         <ul>
                             <li><a href="~/author-edit-profile.html"><i class="bi bi-person"></i>Edit profile</a></li>
                             <li><a href="~/upload-artwork.html" class="active"><i class="bi bi-file-earmark-arrow-up"></i>Upload Artwork</a></li>
